--- a/config.env
+++ b/config.env
@@ -1,15 +1,15 @@
-API_ID=12345
+API_ID=26305247
 
-API_HASH=esx576f8738x883f3sfzx83
+API_HASH=20ca7e6687c281e11782856c7efd0ff7
 
-BOT_TOKEN=55838383:yourtbottokenhere
+BOT_TOKEN=6213184839:AAGDu5TrR6ZiUPB9n82e6z_Anb_b6gMr_mA
 
-BIN_CHANNEL=-100
+BIN_CHANNEL=-1001953595001
 
 PORT=8080
 
-FQDN=your_server_ip
+FQDN=47.254.239.178
 
-OWNER_ID=your_user_id
+OWNER_ID=5152847809
 
-DATABASE_URL=mongodb_uri
+DATABASE_URL=mongodb+srv://Dipanshu_021:ad8920@cluster0.f7migc1.mongodb.net/?retryWrites=true&w=majority
